# tsexplore_app

./: .gitignore  .tsexplore_app.code-workspace  Dockerfile  README.md  config.yaml  docker-compose.yaml  pyproject.toml  requirements.txt  tmp_index_runtime_overwrite.html
app/: cache.py  config.py  main.py  models.py
app/dataloaders/: __init__.py  data_provider.py  db_loader.py  file_loader.py
app/endpoints/: health.py  inversion.py  loader.py  nearest.py  timeseries.py  velocitymap.py
app/models/: types.py
app/routers/: __init__.py  health.py  inversion.py  loader.py  nearest.py  timeseries.py  velocitymap.py
app/services/: __init__.py  data.py  data_provider.py  db_loader.py  file_loader.py  inversion.py  plots.py  provider.py  spatial.py
app/services/deprecated/: database.py  db_loader.py
app/static/: app.js
app/templates/: index.html
src/: __init__.py  app.py  config.py  data.py  inversion.py  models.py  plots.py
static/: app.js
templates/: index.html
