[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tsapp"
version = "0.1.0"
description = "Web application for interactive velocity field visualization and time series analysis"
authors = [{ name = "Francesco Ioli", email = "francescoioli@cnr.it" }]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "plotly>=5.24.0",
    "pandas>=2.2.0",
    "numpy>=2.0",
    "scipy>=1.14.0",
    "python-multipart>=0.0.12",
    "jinja2>=3.1.4",
    "python-dotenv>=1.0.1",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "pillow>=12.0.0",
    "matplotlib>=3.10.7",
    "tqdm>=4.67.1",
    "h5py>=3.15.1",
    "psycopg>=3.3.2",
    "requests>=2.32.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
    "ruff>=0.8.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/ts_inversion_app"]

[tool.hatch.version]
path = "src/__init__.py"

[tool.pytest.ini_options]
addopts = ["--import-mode=importlib"]
testpaths = ["tests"]

[tool.bumpver]
current_version = "0.1.0"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message = "bump version {old_version} -> {new_version}"
commit = true
tag = false
push = false

[tool.bumpver.file_patterns]
"pyproject.toml" = ['current_version = "{version}"', 'version = "{version}"']
"src/__init__.py" = ["{version}"]
